    2. The "_self" target only works for links, not forms
    3. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response. 
       This behavior matches that currently used by IE and Navigator.

Limitations: HttpUnit does not support JavaScript

                            
Revision History:

21-May-01
Additions:
    1. selectFile now infers file content for zip extension
    2. <button> tags are now recognized as submit buttons if their type is "submit"
       or not specified.

16-May-01
Additions:
    1. selectFile now can infer file content type for the most common file extensions:
       text, txt, gif, jpg, jpeg, png, html, and htm.
    2. A new version of selectFile allows explicit specification of file content type
       which will override any inferred type.
       
Configuration changes:
    1. The build.xml file has been changed to use a specified directory of dependant jars
       rather than the system classpath. This requires at least ant 1.3. It is no longer
       necessary to specify the classpath parameter when running the unit tests.

 5-May-01 1.2.4
Acknowledgements:
    Thanks to Jim Kimball for finding and fixing the redirection of subframes
    
Problems corrected:
    1. Redirection with subframes was incorrectly targeted at the top frame.
    2. No longer capitalizes all header names; this was necessary for
       compatibility with those servers that do not understand case-insensitive
       header names.
    3. Repeated requests to the same URL were not resending requests properly. 
       This caused some problems with validation.
    4. Now correctly passes the full specification of uploaded files, rather than just the name.

Additions:
    1. Transmitted headers as well as received headers are now shown when loggingHttpHeaders
       is enabled.
    2. The GetMethodWebRequest and PostMethodWebRequest constructors which accept a target 
       are now public.